Expanding cards - fixed horizontal scroll on small screens

--- a/1st Day __ExpandingCards/style.css
+++ b/1st Day __ExpandingCards/style.css
@@ -17,6 +17,7 @@ body {
 .container {
   display: flex;
   width: 90vw;
+  overflow: hidden;
 }
 
 .panel {
